# devtools-course-practice

./: README.md  index.html
.github/workflows/: main.yml
dashboard/: ctest_ext_notes_log.txt
lab-guide/: topics.md
label_bot/: index.js
modules/AVL-Tree/include/: AVLTree.h  BinaryTree.h  TabRecord.h  Table.h
modules/AVL-Tree/src/: AVLTree.cpp
modules/AVL-Tree/test/: test_AVL_Tree.cpp  test_main.cpp
modules/Dijkstra/: CTestTests.txt
modules/Function_Eyler/: CTestTests.txt
modules/Huffman_algorithm/: CTestTests.txt
modules/KonverterFR/: CTestTests.txt
modules/Konverterandcalculator/: CTestTests.txt
modules/KruskalMST/: CTestTests.txt
modules/Matrix/: CTestTests.txt
modules/area_calculation/: CTestTests.txt
modules/binary-search/: CMakeLists.txt  CTestTests.txt
modules/binary-tree/: CTestTests.txt
modules/caesar-cipher/: CTestTests.txt
modules/check_segments_intersection/: CMakeLists.txt  CTestTests.txt
modules/code_vijener/: CTestTests.txt
modules/comb_gen/: CTestTests.txt
modules/fraction-calculator/: CTestTests.txt
modules/fraction-calculator/application/: CMakeLists.txt  fraction_number.cpp
modules/gronsfeld-cipher/: CTestTests.txt
modules/hanoi-tower/: CTestTests.txt
modules/hashmap/: CTestTests.txt
modules/int-radix-sort/: CTestTests.txt
modules/interpolation_search/: CTestTests.txt
modules/intersections/: CTestTests.txt
modules/intersections-line-and-plane-in-3D/: СTestTests.txt
modules/long_numbers/: CTestTests.txt
modules/longest-increasing-subsequence/: CTestTests.txt
modules/longest_common_subsequence/: CMakeLists.txt
modules/longest_common_subsequence/src/: CMakeLists.txt  longest_common_subsequence.cpp
modules/num-integral/: CTestTests.txt
modules/point-falls-into-a-triangle/: CTestTests.txt
modules/polynomial_calculator/: CTestTests.txt
modules/prime-numbers-from-interval/: CTestTests.txt
modules/quadrical-equal/: CTestTests.txt
modules/queue/: CMakeLists.txt  CTestTests.txt
modules/string-encoding-Base64/: CMakeLists.txt  CTestTests.txt
modules/string-encoding-Base64/include/: encoder_application.h
modules/string-encoding-Base64/src/: encoder_application.cpp
modules/vector_3d/: CTestTests.txt
(+301 files in other folders)
